--- a/demo/index.html
+++ b/demo/index.html
@@ -10,6 +10,15 @@
 </head>
 <body>
     <div id="map"></div>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0O8B2Y-TNedkTP99VFB7Yfmhug4B8Wcw&callback=initMap" defer></script>
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcTcaqPtwxSZ6CpvIQG3-WAt1Y29luCv8&callback=initMap">
+</script>
+<header>
+    <div class="logo">
+        <img src="" alt="">
+    </div>
+    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+    <div  id="map-canvas"></div>
+</header>
 </body>
 </html>
