--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
 </script>
 <header>
     <div class="logo">
-        <img src="" alt="">
+        <img src="C:\Users\imisioluwa\Documents\soctrack\soctrack_module\assets\try 1.png" width="50px" height="50px" alt="">
     </div>
     <input id="pac-input" class="controls" type="text" placeholder="Search Box">
     <div  id="map-canvas"></div>
