--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ask NgMap Live!: Real-time updates of news and events around Nigeria</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
+    <script type="module" src="../scraper/data.js"></script>
     <script type="text/javascript" src="./index.js"></script>
 </head>
 <body>
